--- a/i3status.conf
+++ b/i3status.conf
@@ -9,9 +9,9 @@
 general {
         colors = true
         interval = 5
-        color_good = '#00FF64'
-        color_degraded = '#f4fc05'
-        color_bad = '#FF2432'
+        color_good = '#00FF6D'
+        color_degraded = '#EFEF2D'
+        color_bad = '#FF9099'
 }
 
 order += "ipv6"
