Added a fancy Rofi setup script
runrofi.sh now takes SS of screen, blurs it, and then runs rofi with that as the background. Rofi is now full screen. install.sh was changed to copy the runrofi.sh file to /usr/bin. config was changed so when +L was pressed, runrofi.sh would run instead of the other command used. Running rofi this way takes more time though, so remove the scrot & convert commands and remove the -fake-background option from the rofi command if you don't want it to take the screenshot and all that fancy stuff.

--- a/config
+++ b/config
@@ -84,7 +84,7 @@ bindsym $mod+a focus parent
 bindsym --release $mod+l exec lock -p
 
 # start rofi
-bindsym --release $mod+Shift+l exec rofi -show run
+bindsym --release $mod+Shift+l exec runrofi.sh
 
 # Capture a screenshot
 bindsym $mod+Shift+s exec scrot
@@ -159,6 +159,7 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
         status_command i3status
+        font pango: Inconsolata 10
         colors {
         	background #152a2f
         	separator #FEDBC7
