--- a/i3status.conf
+++ b/i3status.conf
@@ -9,9 +9,9 @@
 general {
         colors = true
         interval = 5
-        color_good = '#00FF6D'
-        color_degraded = '#EFEF2D'
-        color_bad = '#FF9099'
+        color_good = '#00D9FF'
+        color_degraded = '#FFFF3C'
+        color_bad = '#FF5D57'
 }
 
 order += "ipv6"
