--- a/i3status.conf
+++ b/i3status.conf
@@ -9,23 +9,19 @@
 general {
         colors = true
         interval = 5
-        color_good = '#00D9FF'
-        color_degraded = '#FFFF3C'
-        color_bad = '#FF5D57'
+        color_good = '#000000'
+        color_degraded = '#000BB8'
+        color_bad = '#996633'
 }
 
-order += "ipv6"
 order += "disk /"
-order += "run_watch DHCP"
-order += "run_watch VPN"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery 0"
-order += "load"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "W: (%quality at %essid) %ip"
+        format_up = "W: %quality at %essid"
         format_down = "W: down"
 }
 
@@ -39,20 +35,8 @@ battery 0 {
         format = "%status %percentage %remaining"
 }
 
-run_watch DHCP {
-        pidfile = "/var/run/dhclient*.pid"
-}
-
-run_watch VPN {
-        pidfile = "/var/run/vpnc/pid"
-}
-
 tztime local {
         format = "%Y-%m-%d %H:%M:%S"
-}
-
-load {
-        format = "%1min"
 }
 
 disk "/" {
