--- a/i3status.conf
+++ b/i3status.conf
@@ -10,8 +10,8 @@ general {
         colors = true
         interval = 5
         color_good = '#000000'
-        color_degraded = '#000BB8'
-        color_bad = '#996633'
+        color_degraded = '#000000'
+        color_bad = '#FF0031'
 }
 
 order += "disk /"
