--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -16,13 +16,13 @@ general {
 
 order += "disk /"
 order += "wireless _first_"
-order += "ethernet _first_"
+order += "volume master"
 order += "battery 0"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "W: %quality at %essid"
-        format_down = "W: down"
+        format_up = " %quality at %essid"
+        format_down = "  Not Connected"
 }
 
 ethernet _first_ {
@@ -32,13 +32,21 @@ ethernet _first_ {
 }
 
 battery 0 {
-        format = "%status %percentage %remaining"
+        format = " %percentage %remaining"
+}
+
+volume master {
+        format = " %volume"
+        format_muted = " "
+        device = "default"
+        mixer = "Master"
+        mixer_idx = 0
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = "%m-%d-%Y %H:%M:%S"
 }
 
 disk "/" {
-        format = "%avail"
+        format = " %avail"
 }
