--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -9,9 +9,9 @@
 general {
         colors = true
         interval = 5
-        color_good = '#000000'
-        color_degraded = '#000000'
-        color_bad = '#FF0031'
+        color_good = '#FDFDFE'
+        color_degraded = '#FFFF5F'
+        color_bad = '#FF005E'
 }
 
 order += "disk /"
