--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -9,9 +9,9 @@
 general {
         colors = true
         interval = 5
-        color_good = '#FDFDFE'
-        color_degraded = '#FFFF5F'
-        color_bad = '#FF005E'
+        color_good = '#040708'
+        color_degraded = '#820C1E'
+        color_bad = '#820C1E'
 }
 
 order += "disk /"
