Adding stuff for a new winter theme
Stopped using i3status and started using yabar. Added some scripts too

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -9,9 +9,9 @@
 general {
         colors = true
         interval = 5
-        color_good = '#040708'
-        color_degraded = '#820C1E'
-        color_bad = '#820C1E'
+        color_good = '#121116'
+        color_degraded = '#857477'
+        color_bad = '#FF005E'
 }
 
 order += "disk /"
