--- a/lightdm/lightdm-gtk-greeter.conf
+++ b/lightdm/lightdm-gtk-greeter.conf
@@ -45,11 +45,11 @@
 #  transition-duration = overrides default value
 #
 [greeter]
-background=/usr/share/background-pictures/lightdm-background.jpg
+background=/usr/share/background-pictures/01.jpg
 #user-background=
-#theme-name=
-#icon-theme-name=
-font-name=Inconsolata
+theme-name=Arc-Flatabulous-Dark
+icon-theme-name=Paper
+font-name=Raleway
 #xft-antialias=
 #xft-dpi=
 #xft-hintstyle=
