--- a/yabar/yabar.conf
+++ b/yabar/yabar.conf
@@ -5,40 +5,43 @@ bar1: {
     position: "top";
     font: "Inconsolata 12, FontAwesome 10";
     underline-size: 2;    
-    background-color-rgb: 0x121116;
+    background-color-rgb: 0x0d0a0b;
     slack: 2;
-
 
     battery: {
         exec: "battery";
         align: "right";
         type: "periodic";
         interval: 30;
-        background-color-rgb: 0x121116;
-        underline-color-rgb: 0x00ff8d;
+        background-color-rgb: 0x0d0a0b;
+        underline-color-rgb: 0x227461;
+        foreground-color-rgb: 0xdcc48e;
         variable-size: true;
     }
 
     wifi: {
-        exec: "getwifinetwork"
-        inherit: "bar1.battery"
+        exec: "getwifinetwork";
+        inherit: "bar1.battery";
+        foreground-color-rgb: 0xdcc48e;
     }
 
     volume: {
         exec: "getvolume";
         fixed-size: 100;
         inherit: "bar1.battery";
-        command-button1: "sao -t"
+        command-button1: "sao -t";
         type: "periodic";
         interval: 1;
+        foreground-color-rgb: 0xdcc48e;
     }
 
     date: {
         exec: "echo  $(date '+%x')";
         inherit: "bar1.battery";
-        underline-color-rgb: 0xffffff;
+        underline-color-rgb: 0x227461;
         align: "right";
         fixed-size: 100;
+        foreground-color-rgb: 0xdcc48e;
     }
     
     time: {
@@ -46,18 +49,20 @@ bar1: {
         inherit: "bar1.battery";
         type: "periodic";
         interval: 5;
-        underline-color-rgb: 0xffffff;
+        underline-color-rgb: 0x227461;
         align: "right";
         fixed-size: 100;
+        foreground-color-rgb: 0xdcc48e;
     }
 
     whoami: {
         exec: "echo  $(whoami)@$(hostname)";
-        inherit: "bar1.battery"
+        inherit: "bar1.battery";
         type: "once";
         align: "left";
         fixed-size: 100;
-        underline-color-rgb: 0xffffff;
+        underline-color-rgb: 0x227461;
+        foreground-color-rgb: 0xdcc48e;
     }
 
     music: {
@@ -68,13 +73,15 @@ bar1: {
         align: "left";
         fixed-size: 300;
         command-button1: "togglepauseplay";
+        foreground-color-rgb: 0xdcc48e;
     }
 
     workspaces: {
-        exec: "python /home/cat/.config/yabar/monitor_workspaces.py";
+        exec: "python /usr/bin/monitor_workspaces.py";
         align: "center";
         type: "persist";
-        background-color-rgb: 0x121116;
+        background-color-rgb: 0x0d0a0b;
         fixed-size: 200;
+        foreground-color-rgb: 0xdcc48e;
     }
 }
