Changed to Japan Two theme
See CHANGELOG for recent changes

--- a/yabar/yabar.conf
+++ b/yabar/yabar.conf
@@ -4,8 +4,8 @@ bar1: {
     block-list: ["battery","volume","wifi","date","time","whoami","music","workspaces"];
     position: "top";
     font: "Inconsolata 12, FontAwesome 10";
+    background-color-rgb: 0x0b0e1c;
     underline-size: 2;    
-    background-color-rgb: 0x0d0a0b;
     slack: 2;
 
     battery: {
@@ -13,16 +13,15 @@ bar1: {
         align: "right";
         type: "periodic";
         interval: 30;
-        background-color-rgb: 0x0d0a0b;
-        underline-color-rgb: 0x227461;
-        foreground-color-rgb: 0xdcc48e;
+        background-color-rgb: 0x0b0e1c;
+        foreground-color-rgb: 0xfff7c0;
         variable-size: true;
     }
 
     wifi: {
         exec: "getwifinetwork";
         inherit: "bar1.battery";
-        foreground-color-rgb: 0xdcc48e;
+        foreground-color-rgb: 0xfff7c0;
     }
 
     volume: {
@@ -32,16 +31,15 @@ bar1: {
         command-button1: "sao -t";
         type: "periodic";
         interval: 1;
-        foreground-color-rgb: 0xdcc48e;
+        foreground-color-rgb: 0xfff7c0;
     }
 
     date: {
         exec: "echo  $(date '+%x')";
         inherit: "bar1.battery";
-        underline-color-rgb: 0x227461;
         align: "right";
         fixed-size: 100;
-        foreground-color-rgb: 0xdcc48e;
+        foreground-color-rgb: 0xfff7c0;
     }
     
     time: {
@@ -49,10 +47,9 @@ bar1: {
         inherit: "bar1.battery";
         type: "periodic";
         interval: 5;
-        underline-color-rgb: 0x227461;
         align: "right";
         fixed-size: 100;
-        foreground-color-rgb: 0xdcc48e;
+        foreground-color-rgb: 0xfff7c0;
     }
 
     whoami: {
@@ -61,8 +58,7 @@ bar1: {
         type: "once";
         align: "left";
         fixed-size: 100;
-        underline-color-rgb: 0x227461;
-        foreground-color-rgb: 0xdcc48e;
+        foreground-color-rgb: 0xfff7c0;
     }
 
     music: {
@@ -73,15 +69,15 @@ bar1: {
         align: "left";
         fixed-size: 300;
         command-button1: "togglepauseplay";
-        foreground-color-rgb: 0xdcc48e;
+        foreground-color-rgb: 0xfff7c0;
     }
 
     workspaces: {
         exec: "python /usr/bin/monitor_workspaces.py";
         align: "center";
         type: "persist";
-        background-color-rgb: 0x0d0a0b;
+        background-color-rgb: 0x0b0e1c;
         fixed-size: 200;
-        foreground-color-rgb: 0xdcc48e;
+        foreground-color-rgb: 0xfff7c0;
     }
 }
