--- a/i3/config
+++ b/i3/config
@@ -35,8 +35,6 @@ bindsym $mod+Return exec i3-sensible-terminal
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -84,7 +82,7 @@ bindsym $mod+a focus parent
 bindsym --release $mod+l exec lock -pf Raleway -- scrot -z
 
 # start rofi
-bindsym --release $mod+Shift+l exec runrofi.sh
+bindsym --release $mod+Shift+l exec rofi -show run
 
 # Capture a screenshot
 bindsym --release Print exec scrot
@@ -192,14 +190,15 @@ bindsym $mod+r mode "resize"
 
 # Window Borders
 # Client Class              <border>    <background>    <text>      <indicator>     <child_border>
-#client.focused              #FFC26C     #FFC26C         #2B2F3E     #FFC26C         #FFC26C
-#client.focused_inactive     #FFC26C     #FFC26C         #2B2F3E     #FFC26C         #FFC26C
-#client.unfocused            #FFC26C     #FFC26C         #2B2F3E     #FFC26C         #FFC26C
-#client.urgent               #FF1B3F     #FF1B3F         #2B2F3E     #FF1B3F         #FF1B3F
-#client.placeholder          #000000     #FFFFFF         #E1D3A4     #000000         #FFFFFF
-#client.background           #FFFFFF
-#for_window [class="^.*"] border pixel 5px
-for_window [class="^.*"] border pixel 0
+#client.focused              #DF1F3B     #DF1F3B         #2B2F3E     #DF1F3B         #DF1F3B
+client.focused              #0B0E1C     #0B0E1C         #2B2F3E     #0B0E1C         #0B0E1C
+client.focused_inactive     #0B0E1C     #0B0E1C         #2B2F3E     #0B0E1C         #0B0E1C
+client.unfocused            #0B0E1C     #0B0E1C         #2B2F3E     #0B0E1C         #0B0E1C
+client.urgent               #0B0E1C     #0B0E1C         #2B2F3E     #0B0E1C         #0B0E1C
+client.placeholder          #000000     #FFFFFF         #E1D3A4     #000000         #FFFFFF
+client.background           #FFFFFF
+for_window [class="^.*"] border pixel 3px
+#for_window [class="^.*"] border pixel 0
 
 gaps outer 10
 gaps inner 5
@@ -208,10 +207,10 @@ gaps inner 5
 exec --no-startup-id synclient TapButton1=1
 
 # Start compton
-# exec --no-startup-id compton -b
+exec --no-startup-id compton -b
 
 # Set the background
-exec --no-startup-id feh --bg-fill /home/cat/Pictures/wallpapers/06.jpg
+exec --no-startup-id feh --bg-fill /home/cat/Pictures/wallpapers/masashi_wakui/24248394492_77255b1f3e_k.jpg
 
 # Start yabar
 exec --no-startup-id yabar
