--- a/yabar/yabar.conf
+++ b/yabar/yabar.conf
@@ -1,11 +1,11 @@
 bar-list: ["bar1"];
 
 bar1: {
-    block-list: ["battery","volume","wifi","date","time","whoami","music","workspaces"];
+    block-list: ["workspaces","battery","volume","wifi","date","time","music"];
     position: "top";
-    font: "Inconsolata 12, FontAwesome 10";
-    background-color-rgb: 0x0b0e1c;
-    underline-size: 2;    
+    font: "ypn envypn 10";
+    background-color-rgb: 0x161916;
+    underline-size: 2;
     slack: 2;
 
     battery: {
@@ -13,15 +13,15 @@ bar1: {
         align: "right";
         type: "periodic";
         interval: 30;
-        background-color-rgb: 0x0b0e1c;
-        foreground-color-rgb: 0xfff7c0;
-        variable-size: true;
+        background-color-rgb: 0x161916;
+        foreground-color-rgb: 0xfffffa;
     }
 
     wifi: {
         exec: "getwifinetwork";
         inherit: "bar1.battery";
-        foreground-color-rgb: 0xfff7c0;
+        fixed-size: 130
+        foreground-color-rgb: 0xfffffa;
     }
 
     volume: {
@@ -31,34 +31,25 @@ bar1: {
         command-button1: "sao -t";
         type: "periodic";
         interval: 1;
-        foreground-color-rgb: 0xfff7c0;
+        foreground-color-rgb: 0xfffffa;
     }
 
     date: {
-        exec: "echo  $(date '+%x')";
+        exec: "echo $(date '+%x')";
         inherit: "bar1.battery";
         align: "right";
         fixed-size: 100;
-        foreground-color-rgb: 0xfff7c0;
+        foreground-color-rgb: 0xfffffa;
     }
     
     time: {
-        exec: "echo   $(date '+%X')";
+        exec: "echo $(date '+%X')";
         inherit: "bar1.battery";
         type: "periodic";
         interval: 5;
         align: "right";
         fixed-size: 100;
-        foreground-color-rgb: 0xfff7c0;
-    }
-
-    whoami: {
-        exec: "echo  $(whoami)@$(hostname)";
-        inherit: "bar1.battery";
-        type: "once";
-        align: "left";
-        fixed-size: 100;
-        foreground-color-rgb: 0xfff7c0;
+        foreground-color-rgb: 0xfffffa;
     }
 
     music: {
@@ -67,17 +58,19 @@ bar1: {
         type: "periodic";
         interval: 5;
         align: "left";
-        fixed-size: 300;
+        justify: "left"
+        fixed-size: 400;
         command-button1: "togglepauseplay";
-        foreground-color-rgb: 0xfff7c0;
+        foreground-color-rgb: 0xfffffa;
     }
 
     workspaces: {
         exec: "python /usr/bin/monitor_workspaces.py";
-        align: "center";
+        align: "left";
+        justify: "left";
         type: "persist";
-        background-color-rgb: 0x0b0e1c;
-        fixed-size: 200;
-        foreground-color-rgb: 0xfff7c0;
+        background-color-rgb: 0x161916;
+        fixed-size: 250;
+        foreground-color-rgb: 0xfffffa;
     }
 }
