Increase the length of music area and other stuff

--- a/yabar/yabar.conf
+++ b/yabar/yabar.conf
@@ -4,24 +4,22 @@ bar1: {
     block-list: ["workspaces","battery","volume","wifi","date","time","music"];
     position: "top";
     font: "ypn envypn 10";
-    background-color-rgb: 0x161916;
-    underline-size: 2;
-    slack: 2;
+    background-color-rgb: 0x211716;
+    slack-size: 4;
 
     battery: {
         exec: "battery";
         align: "right";
         type: "periodic";
         interval: 30;
-        background-color-rgb: 0x161916;
-        foreground-color-rgb: 0xfffffa;
+        background-color-rgb: 0x211716;
+        foreground-color-rgb: 0xfae8a3;
     }
 
     wifi: {
         exec: "getwifinetwork";
         inherit: "bar1.battery";
-        fixed-size: 130
-        foreground-color-rgb: 0xfffffa;
+        foreground-color-rgb: 0xfae8a3;
     }
 
     volume: {
@@ -31,37 +29,34 @@ bar1: {
         command-button1: "sao -t";
         type: "periodic";
         interval: 1;
-        foreground-color-rgb: 0xfffffa;
+        foreground-color-rgb: 0xfae8a3;
     }
 
     date: {
         exec: "echo $(date '+%x')";
         inherit: "bar1.battery";
         align: "right";
-        fixed-size: 100;
-        foreground-color-rgb: 0xfffffa;
+        foreground-color-rgb: 0xfae8a3;
     }
     
     time: {
         exec: "echo $(date '+%X')";
-        inherit: "bar1.battery";
         type: "periodic";
         interval: 5;
         align: "right";
-        fixed-size: 100;
-        foreground-color-rgb: 0xfffffa;
+        foreground-color-rgb: 0xfae8a3;
+        background-color-rgb: 0x211716;
     }
 
     music: {
-        exec: "getmusicstatus";
-        inherit: "bar1.battery";
+        exec: "echo \" $(getmusicstatus) \"";
         type: "periodic";
         interval: 5;
         align: "left";
-        justify: "left"
-        fixed-size: 400;
+        fixed-size: 450;
         command-button1: "togglepauseplay";
-        foreground-color-rgb: 0xfffffa;
+        foreground-color-rgb: 0xfae8a3;
+        background-color-rgb: 0x211716;
     }
 
     workspaces: {
@@ -69,8 +64,8 @@ bar1: {
         align: "left";
         justify: "left";
         type: "persist";
-        background-color-rgb: 0x161916;
         fixed-size: 250;
-        foreground-color-rgb: 0xfffffa;
+        background-color-rgb: 0x211716;
+        foreground-color-rgb: 0xfae8a3;
     }
 }
