--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,8 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:ypn envypn 18
+for_window [class=".*"] title_format "<span font='ypn envypn 8'> > %title</span>"
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -174,36 +175,22 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-#bar {
-#        status_command i3status
-#        font pango: Inconsolata, FontAwesome 10
-#        colors {
-#        	background #FFFFFF
-#        	statusline #121116
-#        	separator #121116
-#        	focused_workspace #FFFFFF #FFFFFF #121116
-#        	active_workspace #FFFFFF #FFFFFF #121116
-#        	inactive_workspace #FFFFFF #FFFFFF #AAAAAA
-#        	urgent_workspace #FF005E #FF005E #121116
-#        }
-#        position top # Status bar at the top
-#}
-
 # Window Borders
 # Client Class              <border>    <background>    <text>      <indicator>     <child_border>
-#client.focused              #FFAF5B     #FFAF5B         #2B2F3E     #FFAF5B         #FFAF5B
-#client.focused_inactive     #FFAF5B     #FFAF5B         #2B2F3E     #FFAF5B         #FFAF5B
-#client.unfocused            #FFAF5B     #FFAF5B         #2B2F3E     #FFAF5B         #FFAF5B
-#client.urgent               #FFAF5B     #FFAF5B         #2B2F3E     #FFAF5B         #FFAF5B
-#client.placeholder          #000000     #FFFFFF         #E1D3A4     #000000         #FFFFFF
-#client.background           #FFFFFF
+client.focused              #FAE8A4     #FAE8A4         #211716     #FAE8A4         #FAE8A4
+client.focused_inactive     #FAE8A4     #FAE8A4         #211716     #FAE8A4         #FAE8A4
+client.unfocused            #FAE8A4     #FAE8A4         #211716     #FAE8A4         #FAE8A4
+client.urgent               #FAE8A4     #FAE8A4         #211716     #FAE8A4         #FAE8A4
+client.placeholder          #000000     #FFFFFF         #E1D3A4     #000000         #FFFFFF
+client.background           #FFFFFF
 #for_window [class="^.*"] border pixel 1px
-for_window [class="^.*"] border none
+for_window [class="^.*"] border normal 0
 
 gaps outer 10
 gaps inner 5
+
+# Allow clicking witht the touchpad
+exec --no-startup-id synclient TapButton1=1
 
 # Start compton
 exec --no-startup-id compton -b
@@ -220,5 +207,4 @@ exec --no-startup-id xset s off
 # Disable DPMS
 exec --no-startup-id xset -dpms
 
-# Allow clicking with touchpad
 exec --no-startup-id xinput set-prop 12 279 1
